--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -80,7 +80,7 @@
 		<table class='ui-table' cellpadding='3'>
 			<tr class='ui-row-header' >
 				<th class='before b-r' colspan='5' > </th>
-				<th class='actions b-r' colspan='4'> Action_type </th>
+				<th class='actions b-r' colspan='4'> Actions (7d) </th>
 				<th class='notifications b-r' colspan='2'> Notifications </th>
 				<!-- <th class='location b-r' colspan='2'> Location </th> -->
 				<th class='after' colspan='7' > </th>
@@ -91,10 +91,10 @@
 				<td class='created b-r'> Created </td>
 				<td class='db-count center b-r'> Metadata </td>
 				<td class='thumbs center b-r'> Photos <br> (7d | all) </td>
-				<td class='strands_created center b-r'> Strands <br> Created (7d) </td>
-				<td class='strands_joined center b-r'> Strands <br> Joined (7d) </td>
-				<td class='photos_added center b-r'> Photos <br> Added (7d) </td>
-				<td class='favs center b-r'> Favs <br> (7d) </td>
+				<td class='strands_created center b-r'> Strands <br> Created </td>
+				<td class='strands_joined center b-r'> Strands <br> Joined </td>
+				<td class='photos_added center b-r'> Photos <br> Added  </td>
+				<td class='favs center b-r'> Favs </td>
 				<td class='notifications center b-r'> Sent <br> (7d)</td>
 				<td class='last-not-timestamp b-r'> Timestamp </td>
 				<!-- <td class='location b-r'> GPS </td>
