--- a/strand/iOS/Strand/Strand/DFStrandGalleryViewController.xib
+++ b/strand/iOS/Strand/Strand/DFStrandGalleryViewController.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
@@ -38,7 +39,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="600" height="20"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DZJ-XQ-wo1" userLabel="People Wrapper">
-                            <rect key="frame" x="236" y="0.0" width="128" height="20"/>
+                            <rect key="frame" x="236" y="-2" width="128" height="20"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="People" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oSA-Sf-c6J" userLabel="People Label">
                                     <rect key="frame" x="17" y="2" width="42" height="16"/>
@@ -53,7 +54,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Assets/Icons/PeopleHeaderIcon.png" translatesAutoresizingMaskIntoConstraints="NO" id="Bic-Vx-B4G">
-                                    <rect key="frame" x="0.0" y="3" width="13" height="13"/>
+                                    <rect key="frame" x="0.0" y="4" width="13" height="13"/>
                                     <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="13" id="PkU-I7-a31"/>
@@ -66,7 +67,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </imageView>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Assets/Icons/InviteHeaderIcon" translatesAutoresizingMaskIntoConstraints="NO" id="taR-b5-Fap">
-                                    <rect key="frame" x="70" y="3" width="13" height="13"/>
+                                    <rect key="frame" x="70" y="4" width="13" height="13"/>
                                     <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="13" id="koz-8E-Xxy"/>
@@ -94,12 +95,12 @@
                             </constraints>
                         </view>
                     </subviews>
-                    <color key="backgroundColor" red="0.96078437566757202" green="0.31764706969261169" blue="0.18823531270027161" alpha="0.80000000000000004" colorSpace="deviceRGB"/>
+                    <color key="backgroundColor" red="0.96078431372549022" green="0.31764705882352939" blue="0.18823529411764706" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstItem="DZJ-XQ-wo1" firstAttribute="top" secondItem="PHW-KG-z5B" secondAttribute="top" id="0Vd-8H-Vem"/>
+                        <constraint firstItem="DZJ-XQ-wo1" firstAttribute="top" secondItem="PHW-KG-z5B" secondAttribute="top" constant="-2" id="0Vd-8H-Vem"/>
                         <constraint firstAttribute="centerX" secondItem="DZJ-XQ-wo1" secondAttribute="centerX" id="iBE-gz-KC7"/>
                         <constraint firstAttribute="height" constant="20" id="yoO-RN-CxB"/>
-                        <constraint firstAttribute="bottom" secondItem="DZJ-XQ-wo1" secondAttribute="bottom" id="z7X-XW-dz5"/>
+                        <constraint firstAttribute="bottom" secondItem="DZJ-XQ-wo1" secondAttribute="bottom" constant="2" id="z7X-XW-dz5"/>
                     </constraints>
                 </view>
             </subviews>
