--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -79,7 +79,7 @@
 		<div class='ui-header'> Strand v2 &mdash; {{ strandV2List|length }} accounts </div>
 		<table class='ui-table' cellpadding='3'>
 			<tr class='ui-row-header' >
-				<th class='before b-r' colspan='5' > </th>
+				<th class='before b-r' colspan='6' > </th>
 				<th class='actions b-r' colspan='4'> Actions (7d) </th>
 				<th class='notifications b-r' colspan='2'> Notifications </th>
 				<!-- <th class='location b-r' colspan='2'> Location </th> -->
@@ -91,6 +91,7 @@
 				<td class='created b-r'> Created </td>
 				<td class='db-count center b-r'> Metadata </td>
 				<td class='thumbs center b-r'> Photos <br> (7d | all) </td>
+				<td class='invites center b-r'> Invites <br> Sent </td>
 				<td class='strands_created center b-r'> Strands <br> Created </td>
 				<td class='strands_joined center b-r'> Strands <br> Joined </td>
 				<td class='photos_added center b-r'> Photos <br> Added  </td>
@@ -110,6 +111,7 @@
 				<td class='created timeago b-r' title="{{ entry.userCreated }}">  </td>
 				<td class='db-count right b-r'>	{{ entry.metadataCount }} </td>		
 				<td class='thumbs right b-r'> {{ entry.weeklyPhotos }} | {{ entry.user.thumbsCount }} </td>
+				<td class='invites right b-r'> {{ entry.inviteCount }} </td>
 				<td class='strands_created center b-r'> {{ entry.weeklyStrandsCreated }} </td>
 				<td class='strands_joined center b-r'> {{ entry.weeklyStrandsJoined }} </td>
 				<td class='photos_added center b-r'> {{ entry.weeklyPhotosAdded }} </td>
