--- a/strand/iOS/Strand/Strand/DFCreateStrandViewController.xib
+++ b/strand/iOS/Strand/Strand/DFCreateStrandViewController.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
@@ -75,7 +76,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="320" height="39"/>
                     <subviews>
                         <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="7wg-2n-b5b">
-                            <rect key="frame" x="10" y="6" width="300" height="29"/>
+                            <rect key="frame" x="10" y="0.0" width="300" height="29"/>
                             <segments>
                                 <segment title="Suggested"/>
                                 <segment title="All"/>
@@ -87,9 +88,9 @@
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="centerY" secondItem="7wg-2n-b5b" secondAttribute="centerY" id="93i-Fo-mb2"/>
                         <constraint firstAttribute="height" constant="39" id="HVB-T0-ocF"/>
                         <constraint firstItem="7wg-2n-b5b" firstAttribute="leading" secondItem="Yvz-qE-zsB" secondAttribute="leading" constant="10" id="Ik9-ao-mSF"/>
+                        <constraint firstItem="7wg-2n-b5b" firstAttribute="top" secondItem="Yvz-qE-zsB" secondAttribute="top" id="Uh7-iy-Z81"/>
                         <constraint firstAttribute="trailing" secondItem="7wg-2n-b5b" secondAttribute="trailing" constant="10" id="fnm-DA-cnZ"/>
                     </constraints>
                 </view>
