Change language and icons to say "swap"

--- a/strand/iOS/Strand/Strand/DFCreateStrandTableViewCell.xib
+++ b/strand/iOS/Strand/Strand/DFCreateStrandTableViewCell.xib
@@ -51,7 +51,7 @@
                                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Share with" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Us-ce-ejk">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Swap with" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Us-ce-ejk">
                                                 <rect key="frame" x="0.0" y="0.0" width="69" height="17"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="69" id="76q-TG-GMI"/>
